--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuetify": "^3.5.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
