--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "vuetify": "^3.5.15"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.0"
   }
